Fix summary bug on safari

--- a/style.css
+++ b/style.css
@@ -59,9 +59,6 @@ body {
   box-shadow: 0 4px 16px var(--very-dark-grayish-blue);
 }
 
-.card {
-}
-
 .card__image-fg {
   background: url('images/illustration-woman-online-mobile.svg') no-repeat center;
   width: 200px;
@@ -103,6 +100,15 @@ details {
 
 details[open] summary ~ * {
   animation: sweep .5s;
+}
+
+details > summary {
+  display: block;
+  outline: none;
+}
+
+details > summary::-webkit-details-marker {
+  display: none;
 }
 
 @keyframes sweep {
